crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@map.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ {\"foo\":\"bar\"}.foo }}"
info: {}
input_file: minijinja/tests/inputs/map.txt
---
bar

