crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@math.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "should be -2.5: {{ 1.5 * 2.5 * 2 / 3 - var }}\nshould be -3.0: {{ 1.5 * 2.5 * 2 // 3 - var }}\nshould be 2.0: {{ 4 / 2 }}\nshould be 2: {{ 4 // 2 }}\nshould be 0: {{ 1 - 1 }}\nshould be 0: {{1-1}}\nshould be -1: {{ -1 }}"
info:
  var: 5
input_file: minijinja/tests/inputs/math.txt
---
should be -2.5: -2.5
should be -3.0: -3.0
should be 2.0: 2.0
should be 2: 2
should be 0: 0
should be 0: 0
should be -1: -1

